--- a/OPENAI_API/client/index.html
+++ b/OPENAI_API/client/index.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body>
+  <body style="background-image: url('../public/images/header.png');
+  background-position: center;
+  background-attachment: fixed ;
+  cursor: url('./src/assets/icons8-select-cursor-16.png'), auto;
+  ">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
