--- a/OPENAI_API/client/index.html
+++ b/OPENAI_API/client/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body style="background-image: url('../public/images/header.png');
+  <body style="background-image: url('../public/images/TEST1.png');
   background-position: center;
   background-attachment: fixed ;
   cursor: url('./src/assets/icons8-select-cursor-16.png'), auto;
