--- a/OPENAI_API/client/index.html
+++ b/OPENAI_API/client/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PaperFREE BETA</title>
+    <title>Vite + React</title>
   </head>
-  <body style="background-image: url('../public/images/Back1.png');
+  <body style="background-image: url('../public/images/header.png');
   background-position: center;
   background-attachment: fixed ;
   cursor: url('./src/assets/icons8-select-cursor-16.png'), auto;
