--- a/OPENAI_API/client/index.html
+++ b/OPENAI_API/client/index.html
@@ -6,9 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PaperFREE BETA</title>
   </head>
-  <body style="background-image: url('../public/images/Back1.png');
+<!--   <body style="background-image: url('../public/images/Back1.png');
   background-position: center;
   background-attachment: fixed ;
+  cursor: url('./src/assets/icons8-select-cursor-16.png'), auto;
+  "> -->
+  <body style="background: rgb(8,62,47);
+background: radial-gradient(circle, rgba(8,62,47,1) 0%, rgba(11,19,41,1) 100%);
+background-position: center;
+background-attachment: fixed ;
   cursor: url('./src/assets/icons8-select-cursor-16.png'), auto;
   ">
     <div id="root"></div>
