Finsihed basic parts of login box+custom fonts

--- a/OPENAI_API/client/index.html
+++ b/OPENAI_API/client/index.html
@@ -7,7 +7,8 @@
     <title>PaperFREE BETA</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lalezar&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&family=Lalezar&display=swap" rel="stylesheet">
   </head>
 <!--   <body style="background-image: url('../public/images/Back1.png');
   background-position: center;
@@ -18,7 +19,7 @@
 background: radial-gradient(circle, rgba(8,62,47,1) 0%, rgba(11,19,41,1) 100%);
 background-position: center;
 background-attachment: fixed ;
-  cursor: url('./src/assets/icons8-select-cursor-16.png'), auto;
+  /* cursor: url('./src/assets/icons8-select-cursor-16.png'), auto; */
   ">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
