--- a/OPENAI_API/client/index.html
+++ b/OPENAI_API/client/index.html
@@ -10,17 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lalezar&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&family=Lalezar&display=swap" rel="stylesheet">
   </head>
-<!--   <body style="background-image: url('../public/images/Back1.png');
-  background-position: center;
-  background-attachment: fixed ;
-  cursor: url('./src/assets/icons8-select-cursor-16.png'), auto;
-  "> -->
-  <body style="background: rgb(8,62,47);
-background: radial-gradient(circle, rgba(8,62,47,1) 0%, rgba(11,19,41,1) 100%);
-background-position: center;
-background-attachment: fixed ;
-  /* cursor: url('./src/assets/icons8-select-cursor-16.png'), auto; */
-  ">
+  <body class="">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
